# Agent-Memory-Compressor

./: .gitignore  LICENSE  README.md  pyproject.toml
agent_memory_compressor/: __init__.py  adapters.py  cli.py  context.py  models.py  orchestrator.py  persistence.py  scoring.py  strategies.py  triggers.py
demos/: long_run_demo.py
tests/: __init__.py  test_cli.py  test_context.py  test_models.py  test_orchestrator.py  test_persistence.py  test_scoring.py  test_strategies.py  test_triggers.py
